# wow

./: CMakeLists.txt  README.md
example/: CMakeLists.txt
example/poco_plugin_example/: CMakeLists.txt  main.cpp
example/zeromq_example/: CMakeLists.txt  main.cpp
lib/pkgconfig/: gtest_main.pc
src/: CMakeLists.txt  main.cpp
src/division/: CMakeLists.txt
src/poco_plugin/: CMakeLists.txt  abstractplugin.h  plugin.cpp  plugin.h
src/poco_test/: CMakeLists.txt  main.cpp  poco_plugin_test.cpp  poco_plugin_test.h
src/zeromq/: CMakeLists.txt  zeromq_test.cpp  zeromq_test.h
test/: CMakeLists.txt
test/poco_test/: CMakeLists.txt  poco_tests.cpp
thirdpart/pocolib/usr/local/lib/: libPocoActiveRecord.dylib  libPocoData.80.dylib  libPocoDataSQLite.dylib  libPocoEncodings.80.dylib  libPocoFoundation.dylib  libPocoJSON.80.dylib  libPocoMongoDB.80.dylib  libPocoNet.dylib  libPocoRedis.dylib  libPocoUtil.dylib  libPocoXML.dylib  libPocoZip.80.dylib
thirdpart/pocolib/usr/local/lib/cmake/Poco/: PocoActiveRecordTargets-relwithdebinfo.cmake  PocoActiveRecordTargets.cmake  PocoDataSQLiteTargets-relwithdebinfo.cmake  PocoDataSQLiteTargets.cmake  PocoDataTargets-relwithdebinfo.cmake  PocoDataTargets.cmake  PocoEncodingsTargets-relwithdebinfo.cmake  PocoFoundationTargets-relwithdebinfo.cmake  PocoJSONTargets-relwithdebinfo.cmake  PocoMongoDBTargets-relwithdebinfo.cmake  PocoMongoDBTargets.cmake  PocoNetTargets-relwithdebinfo.cmake  PocoRedisTargets-relwithdebinfo.cmake  PocoRedisTargets.cmake  PocoUtilTargets-relwithdebinfo.cmake  PocoXMLTargets-relwithdebinfo.cmake  PocoZipTargets-relwithdebinfo.cmake  PocoZipTargets.cmake
thirdpart/zeromq/lib/: libzmq.5.dylib
